--- a/master/android/app/build.gradle
+++ b/master/android/app/build.gradle
@@ -49,6 +49,7 @@ android {
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -69,4 +70,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-firestore'
+//    val multidex_version = "2.0.1"
+//    implementation("androidx.multidex:multidex:$multidex_version")
 }
