--- a/master/pubspec.yaml
+++ b/master/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.3
   flutter_svg: ^0.23.0+1
   provider: ^6.0.1
+  firebase_core: ^1.10.0
+  cloud_firestore: ^3.1.0
+  dropdown_search: ^2.0.0
 
 dev_dependencies:
   flutter_test:
