--- a/master/pubspec.yaml
+++ b/master/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^1.10.0
   cloud_firestore: ^3.1.0
   dropdown_search: ^2.0.0
+  firebase_auth: ^3.2.0
 
 dev_dependencies:
   flutter_test:
