--- a/master/pubspec.yaml
+++ b/master/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^3.1.0
   dropdown_search: ^2.0.0
   firebase_auth: ^3.2.0
+  firebase_analytics: ^8.1.1
   intl:
 
 dev_dependencies:
